--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.39.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
+    "react-d3-tree": "^3.6.6",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.48.2",
     "xlsx": "^0.18.5"
